--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>Form Validation</h1>
 
     <label for="email">Enter email:</label>
-    <input type="email" id="email" name="email">
+    <input type="email" id="email" name="email" required>
+    <span class="error" aria-live="polite"></span>
 
     <label for="country">Choose country:</label>
     <select id="country" name="country">
@@ -23,13 +24,16 @@
     </select>
 
     <label for="zip-code">Enter zip-code:</label>
-    <input type="number" id="zip-code" name="zip-code">
+    <input type="number" id="zip-code" name="zip-code" required>
+    <span class="error" aria-live="polite"></span>
 
     <label for="password">Enter password:</label>
-    <input type="password" id="password" name="password">
+    <input type="password" id="password" name="password" required>
+    <span class="error" aria-live="polite"></span>
 
     <label for="confirm-password">Confirm password:</label>
-    <input type="password" id="confirm-password" name="confirm-password">
+    <input type="password" id="confirm-password" name="confirm-password" required>
+    <span class="error" aria-live="polite"></span>
 
     <div class="buttons">
         <button type="button" class="submit">Submit</button>
