--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <title>Form validaion</title>
 </head>
 <body>
-   <form class="form">
+   <form class="form" novalidate>
     <h1>Form Validation</h1>
 
-    <label for="email">Enter email:</label>
-    <input type="email" id="email" name="email" required>
+    <label for="mail">Enter email:</label>
+    <input type="email" id="mail" name="email" minlength="7">
     <span class="error" aria-live="polite"></span>
 
     <label for="country">Choose country:</label>
@@ -32,7 +32,7 @@
     <span class="error" aria-live="polite"></span>
 
     <label for="confirm-password">Confirm password:</label>
-    <input type="password" id="confirm-password" name="confirm-password" required>
+    <input type="password" id="confirm-password" name="confirm-password" minlength="6" required>
     <span class="error" aria-live="polite"></span>
 
     <div class="buttons">
