--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Form Validation</h1>
 
     <label for="mail">Enter email:</label>
-    <input type="email" id="mail" name="email" minlength="7">
+    <input type="email" id="mail" name="email" minlength="7" required>
     <span class="error" aria-live="polite"></span>
 
     <label for="country">Choose country:</label>
@@ -28,11 +28,12 @@
     <span class="error" aria-live="polite"></span>
 
     <label for="password">Enter password:</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" name="password"  minlength="6"
+    required>
     <span class="error" aria-live="polite"></span>
 
     <label for="confirm-password">Confirm password:</label>
-    <input type="password" id="confirm-password" name="confirm-password" minlength="6" required>
+    <input type="password" id="confirm-password" name="confirm-password"  required>
     <span class="error" aria-live="polite"></span>
 
     <div class="buttons">
