--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </select>
 
     <label for="zip-code">Enter zip-code:</label>
-    <input type="number" id="zip-code" name="zip-code" required>
+    <input type="text" id="zip-code" name="zip-code" required>
     <span class="error" aria-live="polite"></span>
 
     <label for="password">Enter password:</label>
